--- a/index.html
+++ b/index.html
@@ -1,1 +1,242 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>For You 🤍</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
+<style>
+body{
+  margin:0;
+  font-family:'Segoe UI', sans-serif;
+  background: radial-gradient(circle at top,#0b1d3a,#02010a);
+  color:white;
+  text-align:center;
+  overflow-x:hidden;
+}
+
+/* sections */
+section{
+  min-height:100vh;
+  padding:70px 25px;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+}
+
+/* text */
+p{
+  max-width:560px;
+  margin:16px auto;
+  line-height:1.9;
+  font-size:17px;
+  opacity:0;
+  animation:fadeUp 1.2s forwards;
+}
+
+h1,h2{
+  font-weight:500;
+}
+
+/* divider */
+.line{
+  width:70px;
+  height:2px;
+  background:#ffd166;
+  margin:30px auto;
+  border-radius:10px;
+}
+
+/* name animation */
+.name{
+  font-size:34px;
+  font-weight:600;
+  margin-bottom:10px;
+  animation:glow 3s infinite alternate;
+}
+
+@keyframes glow{
+  from{text-shadow:0 0 8px #ffd166;}
+  to{text-shadow:0 0 20px #ff8fab;}
+}
+
+/* fade */
+@keyframes fadeUp{
+  from{opacity:0;transform:translateY(25px);}
+  to{opacity:1;transform:translateY(0);}
+}
+
+/* inputs */
+input{
+  padding:12px;
+  border-radius:25px;
+  border:none;
+  width:220px;
+  text-align:center;
+  margin-top:20px;
+}
+
+button{
+  margin-top:25px;
+  padding:12px 30px;
+  border:none;
+  border-radius:30px;
+  background:#c1121f;
+  color:white;
+  font-size:15px;
+  cursor:pointer;
+}
+
+/* secret */
+.hidden{
+  display:none;
+  margin-top:30px;
+  padding:22px;
+  background:rgba(255,255,255,0.12);
+  border-radius:16px;
+}
+
+/* snow */
+.snow{
+  position:fixed;
+  top:-10px;
+  animation:fall linear infinite;
+  opacity:.8;
+  pointer-events:none;
+}
+
+@keyframes fall{
+  to{transform:translateY(120vh);}
+}
+
+/* hearts */
+.heart{
+  position:fixed;
+  bottom:-20px;
+  animation:float 6s linear infinite;
+  opacity:.6;
+}
+
+@keyframes float{
+  to{transform:translateY(-120vh);}
+}
+
+footer{
+  padding:40px;
+  font-size:14px;
+  opacity:.8;
+}
+</style>
+</head>
+
+<body>
+
+<!-- INTRO -->
+<section>
+  <div class="name" id="name">Wifey 🤍</div>
+  <div class="line"></div>
+
+  <p>
+    I would still choose you, no matter how many times life repeats. ❤️🎄
+  </p>
+
+  <p>
+    Christmas is perfect when Santa gifts what I want (youhhh!) 👻❤️🎄
+  </p>
+</section>
+
+<!-- WARMTH -->
+<section>
+  <p>
+    Your presence makes even the coldest Christmas warm,  
+    and the quiet moments feel nice. ❄️🤍
+  </p>
+</section>
+
+<!-- LOVE -->
+<section>
+  <p><strong>Last month of this year ✨</strong></p>
+  <p><strong>Same love, same us. 🤍</strong></p>
+
+  <p>
+    I’m still choosing you —  
+    today, tomorrow & alwaysss. ❤️🎄
+  </p>
+
+  <p>Foreverer ♾️</p>
+
+  <p>
+    I love you sooooo muchhhhhhhh 🫶🥺
+  </p>
+</section>
+
+<!-- SECRET -->
+<section>
+  <h2>🔐 A little secret</h2>
+  <p>Only for you 🤍</p>
+
+  <input type="password" id="pass" placeholder="Enter password">
+  <br>
+  <button onclick="checkPass()">Unlock</button>
+
+  <div id="secret" class="hidden">
+    <p>
+      I would still choose you,  
+      no matter how many times life repeats. ❤️🎄
+    </p>
+  </div>
+</section>
+
+<!-- END -->
+<section>
+  <p>
+    Just a little Christmas reminder from my heart,  
+    that’s all I wanted to say this Christmas. 🤍🎄
+  </p>
+</section>
+
+<footer>
+  Made with love 🎄🤍
+</footer>
+
+<script>
+/* password */
+function checkPass(){
+  if(document.getElementById("pass").value==="wifeyh"){
+    document.getElementById("secret").style.display="block";
+  }
+}
+
+/* name rotation */
+const names=["Wifey 🤍","Muthew 🌙","Moluuy 🫶"];
+let i=0;
+setInterval(()=>{
+  document.getElementById("name").innerText=names[i];
+  i=(i+1)%names.length;
+},2500);
+
+/* snow */
+for(let i=0;i<35;i++){
+  let s=document.createElement("div");
+  s.className="snow";
+  s.innerHTML="❄";
+  s.style.left=Math.random()*100+"vw";
+  s.style.animationDuration=4+Math.random()*6+"s";
+  s.style.fontSize=12+Math.random()*18+"px";
+  document.body.appendChild(s);
+}
+
+/* hearts */
+for(let i=0;i<15;i++){
+  let h=document.createElement("div");
+  h.className="heart";
+  h.innerHTML="❤️";
+  h.style.left=Math.random()*100+"vw";
+  h.style.animationDuration=5+Math.random()*6+"s";
+  h.style.fontSize=12+Math.random()*18+"px";
+  document.body.appendChild(h);
+}
+</script>
+
+</body>
+</html>
