--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -43,9 +43,7 @@ p{
   transform:translateY(0);
 }
 
-h1,h2{
-  font-weight:500;
-}
+h1,h2{font-weight:500}
 
 /* divider */
 .line{
@@ -97,7 +95,7 @@ button{
   cursor:pointer;
 }
 
-/* secret */
+/* hidden */
 .hidden{
   display:none;
   margin-top:30px;
@@ -106,7 +104,7 @@ button{
   border-radius:18px;
 }
 
-/* photo fade */
+/* photo fade + blur */
 .photo-box{
   width:260px;
   height:360px;
@@ -123,13 +121,11 @@ button{
   object-fit:cover;
   position:absolute;
   opacity:0;
-  animation:fadePhotos 12s infinite;
+  filter:blur(10px);
+  transition:opacity 1.5s ease, filter 2s ease;
 }
 
-.photo-box img:nth-child(1){animation-delay:0s;}
-.photo-box img:nth-child(2){animation-delay:4s;}
-.photo-box img:nth-child(3){animation-delay:8s;}
-
+/* fade animation */
 @keyframes fadePhotos{
   0%{opacity:0}
   10%{opacity:1}
@@ -216,17 +212,26 @@ footer{
   </p>
 </section>
 
-<!-- PHOTO FADE -->
+<!-- LOCKED PHOTOS -->
 <section class="reveal">
-  <p>
-    Some moments don’t need words…  
-    they just stay forever. 🤍📸
-  </p>
+  <p>🔐 Locked memories</p>
+  <p>Only for you 🤍</p>
 
-  <div class="photo-box">
-    <img src="photo1.jpg">
-    <img src="photo2.jpg">
-    <img src="photo3.jpg">
+  <input type="password" id="photoPass" placeholder="Enter password">
+  <br>
+  <button onclick="unlockPhotos()">Unlock Photos</button>
+
+  <div id="photoSection" class="hidden">
+    <p>
+      Some moments don’t need words…  
+      they just stay forever. 🤍📸
+    </p>
+
+    <div class="photo-box">
+      <img src="photo1.jpg">
+      <img src="photo2.jpg">
+      <img src="photo3.jpg">
+    </div>
   </div>
 </section>
 
@@ -247,7 +252,7 @@ footer{
   </p>
 </section>
 
-<!-- SECRET -->
+<!-- SECRET MESSAGE -->
 <section class="reveal">
   <h2>🔐 A little secret</h2>
   <p>Only for you 🤍</p>
@@ -287,10 +292,25 @@ window.addEventListener("scroll",()=>{
   });
 });
 
-/* password */
+/* secret text */
 function checkPass(){
   if(document.getElementById("pass").value==="wifeyh"){
     document.getElementById("secret").style.display="block";
+  }
+}
+
+/* unlock photos with blur + delay */
+function unlockPhotos(){
+  if(document.getElementById("photoPass").value==="wifeyh"){
+    document.getElementById("photoSection").style.display="block";
+    const imgs=document.querySelectorAll(".photo-box img");
+    imgs.forEach((img,i)=>{
+      setTimeout(()=>{
+        img.style.opacity="1";
+        img.style.filter="blur(0)";
+        img.style.animation="fadePhotos 12s infinite";
+      }, i*1200);
+    });
   }
 }
 
@@ -341,7 +361,7 @@ for(let i=0;i<120;i++){
   document.body.appendChild(st);
 }
 
-/* sparkle */
+/* sparkle cursor */
 document.addEventListener("mousemove",e=>{
   let sp=document.createElement("div");
   sp.className="sparkle";
